# django-controlled-vocabulary

./: .travis.yml  pyproject.toml  tox.ini
controlled_vocabulary/: __init__.py  admin.py  apps.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
controlled_vocabulary/management/commands/: vocab.py
controlled_vocabulary/vocabularies/: base.py  base_csv.py  base_http.py  base_list.py  fast_forms.py  iso15924.py  iso639_2.py  mime.py  schema.py  wikidata.py
tests/django2/tests/: settings.py  urls.py  wsgi.py
tests/django3/tests/: asgi.py  settings.py  urls.py  wsgi.py
tests/django4/tests/: asgi.py  settings.py  urls.py  wsgi.py
tests/django5/tests/: asgi.py  settings.py  urls.py  wsgi.py
